--- a/INSTALL
+++ b/INSTALL
@@ -50,17 +50,18 @@ GRASS source code is currently distributed in 2 forms:
 2) SVN or SVN Snapshots of source code (SVN or SVN snapshot)
 
   This version of the source code can be acquired either from the SVN
-  repository (http://svn.osgeo.org/grass/) or as a snapshot
+  repository (https://svn.osgeo.org/grass/) or as a snapshot
   (*.tar.gz package) of that SVN repository. The SVN snapshot name
   contains the date when the snapshot was created (checked out from
-  the SVN repository), e.g. grass-7.0.svn_src_snapshot_2008_10_19.tar.gz
-  Further instructions at http://trac.osgeo.org/grass/wiki/DownloadSource
+  the SVN repository), e.g. grass-7.0.svn_src_snapshot_2016_06_11.tar.gz
+  from https://grass.osgeo.org/grass70/source/snapshot/
+  Further instructions at https://trac.osgeo.org/grass/wiki/DownloadSource
 
 
 (B) COMPILATION
 
-IMPORTANT: All unix distributions are different.
-           For Solaris, see hint below.
+IMPORTANT: All Unix based distributions are different.
+           For Solaris, see hints below.
 
 The command,
 
@@ -98,11 +99,11 @@ Next step is the compilation itself:
 
     make       
 
-Detailed Wiki notes for various operating systems:
-http://grasswiki.osgeo.org/wiki/Compile_and_Install
+Detailed Wiki notes for various operating systems (MS-Windows, GNU/Linux distros,
+FreeBSD, AIX, etc) are available at:
+https://grasswiki.osgeo.org/wiki/Compile_and_Install
 
-
-Note for Solaris users:
+Note for Solaris users (see also Wiki page above):
 
 To configure GRASS correctly on a system which doesn't have a suitable
 install program (AC_PROG_INSTALL ignores versions which are known to
@@ -116,7 +117,7 @@ or:
 Then proceed as described above.
 
 
-Note for using a different compiler:
+Note when using a compiler different from "gcc":
 
 By setting environment variables, the compiler
 names can be defined (C and C++):
@@ -129,8 +130,8 @@ names can be defined (C and C++):
 To successfully compile GRASS on 64bit platforms, the required
 FFTW2 library has to be compiled with -fPIC flag:
 
-    #this applies to FFTW2, not GRASS:
-    cd fftw-2.1.5/
+    #this applies to FFTW3, not to GRASS GIS:
+    cd fftw-3.3.4/
     CFLAGS="-fPIC" ./configure
     make
     make install
@@ -164,16 +165,16 @@ or run
 
 (E) INSTALLATION ON MACOSX
 
-See the ReadMe.rtf in the ./macosx/ folder.
+See the ReadMe.rtf in the ./macosx/ folder and the Wiki page above.
 
 
 (F) RUNNING GRASS GIS
 
 Download a sample data package from the GRASS web site, see
-http://grass.osgeo.org/download/sample-data/
+https://grass.osgeo.org/download/sample-data/
 
-Extract the data set and point "database" in the
-GRASS startup menu to the directory.
+Extract the data set and point the "Database" field in the
+GRASS GIS startup menu to the extracted directory.
 
 Enjoy.
 
@@ -239,6 +240,10 @@ better settings to us):
   CFLAGS="-O2 -msse -msse2 -mfpmath=sse -minline-all-stringops" # Intel XEON 64bit processor
   CFLAGS="-mtune=nocona -m64 -minline-all-stringops"            # Intel Pentium 64bit processor
 
+Note: As of version 4.3.0, GCC offers the -march=native switch that
+enables CPU auto-detection and automatically selects optimizations supported
+by the local machine at GCC runtime including -mtune.
+
 To find out optional CFLAGS for your platform, enter:
   gcc -dumpspecs
 
@@ -265,12 +270,12 @@ The -g and -Wall compiler flags are often useful for assisting debugging:
   CFLAGS="-g -Wall" ./configure
 
 See also the file ./doc/debugging.txt and the Wiki page
-http://grasswiki.osgeo.org/wiki/GRASS_Debugging
+https://grasswiki.osgeo.org/wiki/GRASS_Debugging
 
 
 (K) LARGE FILE SUPPORT (for raster maps)
 
-GRASS >= 7.0 includes improved support for reading and writing large files
+GRASS >= 7.0.0 includes improved support for reading and writing large files
 (> 2GB) if it is possible in your operating system. If you compile with
   configure [...] --enable-largefile
 you should be able to have raster and vector maps which are larger than 2GB.
@@ -278,32 +283,35 @@ you should be able to have raster and vector maps which are larger than 2GB.
 While most code has been updated, individual programs may not yet work with
 large files - please report.
 
+See also
+https://grasswiki.osgeo.org/wiki/GRASS_GIS_Performance
+https://grasswiki.osgeo.org/wiki/Software_requirements_specification
 
 (L) SUPPORT
 
 Note that this code is still actively being developed and errors inevitably
 turn up. If you find a bug, please report it to the GRASS bug tracking system
-so we can fix it. See http://grass.osgeo.org/development/bug-tracking/
+so we can fix it. See https://grass.osgeo.org/development/bug-tracking/
 
 If you are interested in helping to develop GRASS, please join the GRASS
-developers mailing list. See http://grass.osgeo.org/development/
+developers mailing list. See https://grass.osgeo.org/development/
 
 
 (M) GRASS PROGRAMMER'S MANUAL
 
 The Programmer's manual is generated with doxygen from the source code.
 Please see the README file and the files at:
-http://grass.osgeo.org/programming7/
+https://grass.osgeo.org/programming7/
 
 (N) CONTRIBUTING CODE AND PATCHES
 
 Please see ./SUBMITTING in this directory, or better,
-http://trac.osgeo.org/grass/wiki/Submitting
+https://trac.osgeo.org/grass/wiki/Submitting
 
 
 (O) DRAFT TUTORIAL
 
-http://grass.osgeo.org/documentation/first-time-users/
+https://grass.osgeo.org/documentation/first-time-users/
 
 ------------------
 (C) 1999-2016 by The GRASS Development Team
